--- a/pushBox/boxPusherEval.ipynb
+++ b/pushBox/boxPusherEval.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Nov 28 2023 23:48:36\n",
+      "2024-03-08 15:49:55.665897: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-03-08 15:49:55.665924: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-03-08 15:49:55.666922: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-03-08 15:49:55.673193: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-03-08 15:49:56.446180: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import gymnasium\n",
     "import push_box\n",
@@ -22,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +45,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "argc=2\n",
+      "argv[0] = --unused\n",
+      "argv[1] = --start_demo_name=Physics Server\n",
+      "ExampleBrowserThreadFunc started\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "Creating context\n",
+      "Created GL 3.3 context\n",
+      "Direct GLX rendering context obtained\n",
+      "Making context current\n",
+      "GL_VENDOR=NVIDIA Corporation\n",
+      "GL_RENDERER=NVIDIA GeForce GTX 1080/PCIe/SSE2\n",
+      "GL_VERSION=3.3.0 NVIDIA 545.23.08\n",
+      "GL_SHADING_LANGUAGE_VERSION=3.30 NVIDIA via Cg compiler\n",
+      "pthread_getconcurrency()=0\n",
+      "Version = 3.3.0 NVIDIA 545.23.08\n",
+      "Vendor = NVIDIA Corporation\n",
+      "Renderer = NVIDIA GeForce GTX 1080/PCIe/SSE2\n",
+      "b3Printf: Selected demo: Physics Server\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "MotionThreadFunc thread started\n",
+      "ven = NVIDIA Corporation\n",
+      "ven = NVIDIA Corporation\n"
+     ]
+    }
+   ],
    "source": [
     "env = gymnasium.make('pushBox-v0')\n",
     "env = DummyVecEnv([lambda: env])"
@@ -41,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,22 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/danielmasamba/anaconda3/envs/dan/lib/python3.11/site-packages/torch/cuda/__init__.py:138: UserWarning: CUDA initialization: Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 101: invalid device ordinal (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using cpu device\n"
+      "Using cuda device\n"
      ]
     }
    ],
@@ -79,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -106,16 +147,19 @@
      "text": [
       "box reached target\n",
       "box reached target\n",
+      "box reached target\n",
+      "box reached target\n",
+      "box reached target\n",
       "box reached target\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1.097024368605571, 2.646217356746782)"
+       "(2.6503572316816646, 3.608861730275889)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,9 +170,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numActiveThreads = 0\n",
+      "stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "finished\n",
+      "numActiveThreads = 0\n",
+      "btShutDownExampleBrowser stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n"
+     ]
+    }
+   ],
    "source": [
     "# p.disconnect()"
    ]
